Name:                scalable-server

Synopsis:            Library for writing fast/scalable TCP-based services
Description:         Library for writing fast/scalable TCP-based services

Version:             0.3.2

License:             BSD3

License-file:        LICENSE

Homepage:            https://github.com/jamwt/haskell-scalable-server/

Author:              Jamie Turner

Maintainer:          jamie@bu.mp

Category:            Network
Build-type:          Simple

Extra-source-files: example.hs

Cabal-version:       >=1.2


Library
  Exposed-modules:     Network.Server.ScalableServer

  hs-source-dirs:      src

  Build-depends: base >=4 && <5,
                 bytestring >=0.9,
                 attoparsec >=0.10 && < 0.11,
                 network>=2.3,
                 blaze-builder>=0.3 && <0.4,
                 conduit>=0.5&&<0.6,
                 network-conduit>=0.5&&<0.6,
                 mtl >=2,
                 attoparsec-conduit>=0.5&&<0.6

  Extensions:    ScopedTypeVariables
  ghc-options:   -O2
